<resources>
    <string name="app_name">TourneyManager</string>
    <string name="select_mode_label">Select Mode:</string>
    <string name="manager_button">Manager</string>
    <string name="player_button">Player</string>
    <string name="title_activity_manager_dashboard">Manager Dashboard</string>
    <string name="title_activity_login">Manager Sign In</string>
    <string name="title_activity_create_tournament">Create Tournament</string>
    <string name="title_activity_tournament_details">Tournament Details</string>
    <string name="title_activity_match_list">Match List</string>

    <!-- default values -->
    <string name="currency_default">$0</string>
    <string name="number_default">0</string>
    <string name="preference_file_key">edu.gatech.seclass.tourneymanager.spring2017team37</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Manager Dashboard -->
    <string name="total_profit_label">Total Profit</string>
    <string name="num_tournaments_label"># of Tournaments</string>
    <string name="tournament_history_btn">Tournament History</string>
    <string name="create_tournament_btn">Create Tournament</string>
    <string name="manage_tournament_btn">Manage Current Tournament</string>
    <string name="player_management_btn">Player Management</string>
    <string name="match_management_btn">Match Management</string>

    <!-- Strings related to Create Tournament Form -->
    <string name="tourney_name_label">Tournament Name</string>
    <string name="entry_fee_label">Entrance Fee</string>
    <string name="house_cut_label">House Cut</string>
    <string name="invalid_fee_error">Invalid Fee</string>
    <string name="invalid_house_percentage_error">Invalid House Percentage</string>

    <!-- String related to Tournament Details -->
    <string name="no_current_tournament_toast">No current tournament! Please create a new tournament.</string>
    <string name="tournament_status_label">Status</string>
    <string name="num_players_label"># of Players</string>
    <string name="first_place_prize_label">1st Prize</string>
    <string name="second_place_prize_label">2nd Prize</string>
    <string name="third_place_prize_label">3rd Prize</string>
    <string name="profit_label">House Profit</string>
    <string name="cancel_tournament_btn">Cancel</string>
    <string name="start_tournament_btn">Start</string>
    <string name="end_tournament_btn">End</string>
    <string name="player_list_btn">Player List</string>
    <string name="match_list_btn">Match List</string>
    <string name="pick_player_prompt">Select a player</string>

    <!-- String related to playerlist -->
    <string name="player_count_label">Player count</string>
</resources>
