<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.gatech.seclass.tourneymanager.tournament.TournamentDetailsActivity"
    tools:showIn="@layout/activity_tournament_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tourneyNameTextView"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournament_status_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tournamentStatusTextView"
                android:text="@string/number_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_fee_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entranceFeeTextView"
                android:text="@string/currency_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_cut_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/housePercentageTextView"
                android:text="@string/number_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_players_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numPlayersTextView"
                android:text="@string/number_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_place_prize_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstPrizeTextView"
                android:text="@string/currency_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_place_prize_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/secondPrizeTextView"
                android:text="@string/currency_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_place_prize_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thirdPrizeTextView"
                android:text="@string/currency_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profit_label"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profitTextView"
                android:text="@string/currency_default"
                android:textSize="@dimen/text_size"
                android:layout_weight="2" />

        </LinearLayout>

        <Button
            android:text="@string/player_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerListBtn"
            android:textSize="@dimen/text_size"/>

        <Button
            android:text="@string/match_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/matchListBtn"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/start_tournament_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/startTournamentBtn"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

            <Button
                android:text="@string/cancel_tournament_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancelTournamentBtn"
                android:textSize="@dimen/text_size"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
